--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title:       Pixyll
-email:       your_email@example.com
-author:      John Otander
-description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
+title:       Jack Turnbull
+email:       hello@jack.codes
+author:      Jack Turnbull
+description: "I'm a contract JavaScript/Ruby developer, a hired gun. I love being able to see the real world effect of my work. This is my blog/portfolio."
 baseurl:     ""
-url:         "http://pixyll.com"
+url:         "https://jack.codes"
 date_format: "%b %-d, %Y"
 
 # Google services
@@ -60,6 +60,10 @@ flattr_button:
 telegram_username:
 vk_id:
 
+# Social accounts
+github_url: https://github.com/jackturnbull
+twitter_url: https://twitter.com/jackturnbull
+
 # Post sharing icons
 show_sharing_icons: false
 # Change to 'true' to enable individual icons
@@ -104,14 +108,14 @@ text:
       sent:     'Message sent!'
       error:    'Error!'
   thanks: 'Thanks for contacting us. We will reply as soon as possible.'
-  og_locale: 'en_US'
+  og_locale: 'en_GB'
 
 # Build settings
 markdown:     kramdown
 redcarpet:
   extensions: ['smart', 'tables', 'with_toc_data']
 permalink:    pretty
-paginate:     4
+paginate:     1000
 sass:
   style: compressed
 gems:
